--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  lint:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -22,8 +22,3 @@ jobs:
 
     - name: Test
       run: go test -v ./...
-
-    - name: Lint
-      uses: dominikh/staticcheck-action@v1.1.0
-      with:
-        version: "2021.1.2"
